force-app/main/default/objects/Semen_Sample__c/fields/Available_Straws__c.field-meta.xml
<CustomField>
    <fullName>Available_Straws__c</fullName>
    <label>Available Straws</label>
    <summaryFilterItems>
        <field>Semen_Straw__c.Fate__c</field>
        <operation>equals</operation>
        <value>Frozen</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Semen_Straw__c.Has_Been_Exported__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Semen_Straw__c.Semen_Sample__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>