force-app/main/default/objects/Semen_Sample__c/fields/Prep_Method__c.field-meta.xml
<CustomField>
    <fullName>Prep_Method__c</fullName>
    <label>Prep Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>0.5mL DG</fullName>
            </value>
            <value>
                <fullName>02.Ml DG</fullName>
            </value>
            <value>
                <fullName>Wsh 1</fullName>
            </value>
            <value>
                <fullName>Wsh 2</fullName>
            </value>
            <value>
                <fullName>Swim Up</fullName>
            </value>
            <value>
                <fullName>Zymot 3mL</fullName>
            </value>
            <value>
                <fullName>Zymot 850uL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>