force-app/main/default/objects/Semen_Sample__c/fields/Produced_Location__c.field-meta.xml
<CustomField>
    <fullName>Produced_Location__c</fullName>
    <label>Produced Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDPC</fullName>
            </value>
            <value>
                <fullName>Epworth</fullName>
            </value>
            <value>
                <fullName>Ararat</fullName>
            </value>
            <value>
                <fullName>MDHS</fullName>
            </value>
            <value>
                <fullName>WPH</fullName>
            </value>
            <value>
                <fullName>Offsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>