force-app/main/default/objects/Semen_Sample__c/recordTypes/Semen_Analysis.recordType-meta.xml
<RecordType>
    <fullName>Semen_Analysis</fullName>
    <active>true</active>
    <label>Semen Analysis</label>
</RecordType>