force-app/main/default/objects/Semen_Sample__c/recordTypes/Semen_Prep.recordType-meta.xml
<RecordType>
    <fullName>Semen_Prep</fullName>
    <active>true</active>
    <label>Semen Preps</label>
</RecordType>